--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.18",
     "@huggingface/transformers": "^3.5.1",
+    "ai": "^4.3.16",
     "config": "^4.0.0",
     "fast-levenshtein": "^3.0.0",
     "groq-sdk": "^0.22.0",
